changed the path

--- a/data-parser.ipynb
+++ b/data-parser.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a39e1a98dfdbf702d7a532342021a011063266892b967d9d8b521889a25145d9"
+  "signature": "sha256:4e86a5d01119aab07a856584e4f911563511bee81803696e9f2bdefa2f46d06b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,18 +19,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 132
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "wb = xl.open_workbook('./zipcodes-fa15.xlsx')"
+      "wb = xl.open_workbook('./app/static/zipcodes-fa15.xlsx')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 135
     },
     {
      "cell_type": "code",
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 136
     },
     {
      "cell_type": "code",
@@ -71,7 +71,35 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 129
+     "prompt_number": 137
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "get_state('61820')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 139,
+       "text": [
+        "'IL'"
+       ]
+      }
+     ],
+     "prompt_number": 139
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
